# PMXViewer

./: Cargo.toml  README.md
.github/workflows/: rust.yml
PMXUtil/: Cargo.toml
PMXUtil/src/: binary_reader.rs  lib.rs  pmx_loader.rs  pmx_types.rs  tests.rs
shaders/: fragment_shader.glsl  geometry_shader.glsl  shadow_map_vertex.glsl  vertex_shader.glsl
src/: main.rs
src/support/: camera.rs  mod.rs
