[package]
name = "pmxviewer-gl"
version = "0.1.0"
authors = ["t18b219k"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
PMXUtil="*"
glium = "0.26.0"
genmesh = "*"
obj = "*"
glutin ="*"
image = "*"
cgmath = "*"
[build-dependencies]
gl_generator = "*"
