[package]
name = "PMXUtil"
version = "0.1.0"
authors = ["t18b219k"]
edition = "2018"
repository = "https://github.com/t18b219k/PMXLoader"
keywords = ["mmd","pmx"]
license-file = LICENCE
readme = "README.md"
desciption = "A simple pmx loader "
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "*"

